src-ken&y/objects/Item_Attribute__c.object
<CustomObject>
    <customHelpPage>HelpItemAttribute</customHelpPage>
    <description>Contains all the attributes that should be tracked for any particular item.</description>
    <fields>
        <fullName>Date_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether date received should be tracked during creation of inventory.</description>
        <label>Date Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether the expiration date is tracked.</description>
        <inlineHelpText>Select the checkbox to track the item by expiration date. If selected, you are prompted to enter the expiration date when the item is received.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fixed_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fixed Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Plate_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License Plate Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether lot is tracked for the item.</description>
        <inlineHelpText>A check mark indicates that the selected item is being tracked by lot.If selected, you are prompted to enter the lot number when the item is received.</inlineHelpText>
        <label>Lot Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimum_Shelf_Life_In_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether to use the minimum shelf life for this item in the system or not.</description>
        <inlineHelpText>A check mark indicates that Kenandy checks the expiration date against the customer&apos;s acceptable range to determine available inventory. Kenandy prompts you to enter the shelf life when the item is received.</inlineHelpText>
        <label>Minimum Shelf Life In Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Serial Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used</label>
        <type>Checkbox</type>
    </fields>
    <label>Item Attribute</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Item Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>